# polymarket-hft-engine

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  allowances.sh  deploy.sh  hft_nerdy_reporter.py  hft_nerdy_reporter_v2.py
.github/workflows/: ci.yml  docker.yml
config/: monitor_state.json  pingpong.json  report_state.json
examples/: ws_test.rs
src/: api.rs  background_wiring.rs  binance_ws.rs  clob_executor.rs  condition_map.rs  crypto_markets.rs  dry_merger.rs  dry_run_engine.rs  execution.rs  fees.rs  gabagool_strategy.rs  ghost_simulator.rs  hft_hot_path.rs  hft_hot_path_fixed.rs  hft_metrics.rs  hot_path_optimized.rs  hot_switchover.rs  jsonl_logger.rs  jsonl_logger.rs.rej  laddering.rs  lib.rs  main.rs  maker_execution.rs  maker_hybrid.rs  maker_taker_routing.rs  maker_taker_routing.rs.bak  market_rollover.rs  merge_worker.rs  merger.rs  orderbook.rs  pnl.rs  polyfill_integration.rs  pre_order_merge.rs  price_cache.rs  production.rs  resilient_runner.rs  signal_filter.rs  signing.rs  simd_hot_path.rs  simd_parser.rs  (+11 more)
