[package]
name = "gabagool-bot"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Share state
parking_lot = "0.12"
