[package]
name = "pingpong"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "tokio-io"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "http2", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Share state
parking_lot = "0.12"
dashmap = "6"

# Polymarket SDK (Phase 2: Order execution)
# Note: 'clob' feature not available in 0.3.x - using core functionality
polymarket-client-sdk = { version = "0.3", features = ["ws", "tracing"] }

# Alloy for signing (required by polymarket-client-sdk)
alloy = { version = "1.7", features = ["sol-types", "signer-local"] }

# Secrets management
secrecy = "0.8"

# Rust decimal for precise pricing
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
simd-json = "0.14"
# Latency optimization
crossbeam-channel = "0.5"
minstant = "0.1"
core_affinity = "0.8"

